Fix buttons vertical align markdown-editor (#56)

--- a/sass/_custom-libs-override.scss
+++ b/sass/_custom-libs-override.scss
@@ -329,6 +329,10 @@ svg .title {
 
   > .md-header {
     margin: 0;
+
+    .glyphicon {
+      top: 3px;
+    }
   }
 
   > .md-preview {
